--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -1,8 +1,8 @@
 \mainmatter
 
-# (PART) Building Successful Shiny Apps {.unnumbered}
+# (PART) Building Successful `{shiny}` Apps {.unnumbered}
 
-# About Successful Shiny Apps {#successfulshinyapp}
+# About Successful `{shiny}` Apps {#successfulshinyapp}
 
 ## A (very) short introduction to `{shiny}`
 
