--- a/index.Rmd
+++ b/index.Rmd
@@ -73,14 +73,14 @@ This book will soon be available in print, published in the [R Series](https://w
 
 ## Motivation {-}
 
-This book will not __get you started with Shiny__, nor __talk how to work with Shiny once it is sent to production__. 
+This book will not __get you started with `{shiny}`__, nor __talk how to work with Shiny once it is sent to production__. 
 What we will be discussing in this book is __the process of building an application that will later be sent to production__.
 
 Why this topic? Lots of blog posts and books talk about getting started with `{shiny}` [@R-shiny] or about what to do once your application is ready to be sent to production.
 Very few (if any) talk about this area in-between: how to confidently work with `{shiny}` once you know the basics, and before you send it to production. 
 
-This is what this book is going to talk about: building robust Shiny applications, that are ready to be sent to production. 
-We'll focus on the process, the workflow, and the necessary tools for building production-grade Shiny Applications.
+This is what this book is going to talk about: building robust `{shiny}` applications, that are ready to be sent to production. 
+We'll focus on the process, the workflow, and the necessary tools for building production-grade `{shiny}` applications.
 
 ## Who is this book for {-}
 
@@ -133,7 +133,7 @@ This is what this book is about: building `{shiny}` applications that can be use
 
 ## Book structure {-}
 
-+ Part I (Building Successful Shiny Apps) gives a __general context about what we mean by "production-grade" and "successful" Shiny Application, and what challenges arise when you are dealing with a large scale application designed for production__. 
++ Part I (Building Successful `{shiny}` Apps) gives a __general context about what we mean by "production-grade" and "successful" Shiny Application, and what challenges arise when you are dealing with a large scale application designed for production__. 
 In this part, we will define what we mean by "Successful", stress the importance of project management, develop how to structure your project for production, and introduce the `{golem}` [@R-golem] package.
 We will finally briefly introduce to our development workflow: a workflow that will be explored in part 2 to 6.
 
@@ -144,7 +144,7 @@ _Step 3: Build_ explores the building step of the application, _i.e_ the core en
 _Step 4: Strengthen_ explores in depth testing, continuous integration, and version control.  
 _Step 5: Deploy_ develops the various possibilities for preparing your application to be deployed.
 
-+ Part VII (Optimizing) __tackles the question of optimization__, first by introducing the general concepts about optimization, then by presenting some common caveats of Shiny Apps, and then showing how to optimize R code, and how to use JavaScript to lighten R work.
++ Part VII (Optimizing) __tackles the question of optimization__, first by introducing the general concepts about optimization, then by presenting some common caveats of `{shiny}` Apps, and then showing how to optimize R code, and how to use JavaScript to lighten R work.
 
 
 ## About the authors {-}
@@ -195,14 +195,14 @@ One single book could not cover everything there is to know about `{shiny}`.
 Here are some resources you can use in addition to this book.
 You can also find more resources in the bibliography.
 
-### Getting started with Shiny  {-}
+### Getting started with `{shiny}`  {-}
 
 + [Learn Shiny with RStudio](https://shiny.rstudio.com/tutorial/)
 + [Getting Started with Shiny](https://ourcodingclub.github.io/2017/03/07/shiny.html)
 + [Mastering Shiny](https://github.com/hadley/shiny-book)
 + [A gRadual intRoduction to Shiny](https://laderast.github.io/gradual_shiny/)
 
-### Shiny into production  {-}
+### `{shiny}` into production  {-}
 
 + [Shiny in production: Principles, practices, and tools](https://resources.rstudio.com/rstudio-conf-2019/shiny-in-production-principles-practices-and-tools-joe-cheng)
 + [Shiny in Production](https://kellobri.github.io/shiny-prod-book/)
