--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -6,7 +6,7 @@
 
 ## A (very) short introduction to `{shiny}`
 
-If you are reading this page, chances are you already know what a `{shiny}` application (shorten "Shiny app") is---**a web application that communicates with R, built in R, and working with R**.
+If you are reading this page, chances are you already know what a `{shiny}` application (sometimes shorten "`{shiny}` app") is---**a web application that communicates with R, built in R, and working with R**.
 The beauty of `{shiny}` [@R-shiny] is that it makes it easy for someone already familiar with R to create a small app in a matter of hours.
 With small and minimal `{shiny}` apps, no knowledge of HTML, CSS or JavaScript is required, and you do not have to think about technical elements that usually come with web applications---for example, you do not have to think about the port the application is served on: `{shiny}` picks one for you [^big-shiny-1] .
 Same goes for serving external dependencies: the application comes with its set of CSS and JavaScript dependencies that a common `{shiny}` developer does not need to worry about.
