--- a/index.Rmd
+++ b/index.Rmd
@@ -73,7 +73,7 @@ This book will soon be available in print, published in the [R Series](https://w
 
 ## Motivation {-}
 
-This book will not __get you started with `{shiny}`__, nor __talk how to work with Shiny once it is sent to production__. 
+This book will not __get you started with `{shiny}`__, nor __talk how to work with `{shiny}` once it is sent to production__. 
 What we will be discussing in this book is __the process of building an application that will later be sent to production__.
 
 Why this topic? Lots of blog posts and books talk about getting started with `{shiny}` [@R-shiny] or about what to do once your application is ready to be sent to production.
@@ -133,7 +133,7 @@ This is what this book is about: building `{shiny}` applications that can be use
 
 ## Book structure {-}
 
-+ Part I (Building Successful `{shiny}` Apps) gives a __general context about what we mean by "production-grade" and "successful" Shiny Application, and what challenges arise when you are dealing with a large scale application designed for production__. 
++ Part I (Building Successful `{shiny}` Apps) gives a __general context about what we mean by "production-grade" and "successful" `{shiny}` Application, and what challenges arise when you are dealing with a large scale application designed for production__. 
 In this part, we will define what we mean by "Successful", stress the importance of project management, develop how to structure your project for production, and introduce the `{golem}` [@R-golem] package.
 We will finally briefly introduce to our development workflow: a workflow that will be explored in part 2 to 6.
 
