--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -907,7 +907,7 @@ server <- function(
   
   observe({
     # We observe input$value every second. 
-    # You'll realise that even after the UI
+    # You'll realize that even after the UI
     # is removed, input$value is still available.
     invalidateLater(1000)
     print(input$value)
