added missing word

--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -61,7 +61,7 @@ Concept maps are a widely used tool, be it in the software engineering world and
 The idea with concept maps is to take a piece of paper (or a digital tool), where you **draw all the concepts that come to mind for a specific topic, and all the relationships that link these concepts together**.
 Drawing a concept map is a way to organize the knowledge of a specific topic.
 
-When doing this for a piece software, we are not trying to add technical details about the way things are implemented: we are listing down the various "actors" (the concepts) around our app, with the relationships they have.
+When doing this for a piece of software, we are not trying to add technical details about the way things are implemented: we are listing down the various "actors" (the concepts) around our app, with the relationships they have.
 For example, here is a very simple concept map of the `{hexmake}` [@R-hexmake] app.
 
 (ref:hexmakeconceptmap) `{hexmake}` concept map, built with XMind (<https://www.xmind.net>)
