--- a/index.Rmd
+++ b/index.Rmd
@@ -352,6 +352,7 @@ make_redirect("databasedemo", "https://connect.thinkr.fr/databasedemo/")
 make_redirect("graysacle", "https://connect.thinkr.fr/graysacle/")
 make_redirect("bs4dashdemo", "https://connect.thinkr.fr/bs4dashdemo/")
 make_redirect("shinyfuture", "https://connect.thinkr.fr/shinyfuture/")
+make_redirect("deploy", "/deploy-golem")
 try({
   dirs <- list.dirs(
     "redirects"
