--- a/13-deploy.Rmd
+++ b/13-deploy.Rmd
@@ -1,6 +1,6 @@
 # (PART) Step 5: Deploy {.unnumbered}
 
-# Deploy your application {#deploy-golem}
+# Deploy your application {#deploy}
 
 > Your deploys should be as boring, straightforward, and stress-free as possible.\
 > `r right_link("How to Deploy Software - Zach Holman","https://zachholman.com/posts/deploying-software")`
