--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -2,7 +2,7 @@
 
 # (PART) Building Successful `{shiny}` Apps {.unnumbered}
 
-# About Successful `{shiny}` Apps {#successfulshinyapp}
+# About Successful `{shiny}` Apps {#successful-shiny-app}
 
 ## A (very) short introduction to `{shiny}`
 
