--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -1,4 +1,4 @@
-# Structuring your Project {#structure}
+# Structuring your Project {#structuring-project}
 
 ## `{shiny}` App as a Package
 
@@ -77,7 +77,7 @@ Documenting your `{shiny}` app involves explaining features to the end users and
 The good news is that using the R package structure helps you leverage the common tools for documentation in R:
 
 -   A `README` file that you will put at the root of your package, which will document how to install the package, and some information about how to use the package. Note that in many cases developers go for a `.md` file (short for markdown) because this format is automatically rendered on services like GitHub, GitLab, or any other main version control system.\
--   `Vignettes` are longer form documentation that explain in more depth how to use your app. There are also useful if you need to detail the core functions of the application using a static document, notably for prototyping and/or for exchanging with the client. We will get back to `Vignettes` in Chapter \@ref(stepprotopype) when we will talk about prototyping.
+-   `Vignettes` are longer form documentation that explain in more depth how to use your app. There are also useful if you need to detail the core functions of the application using a static document, notably for prototyping and/or for exchanging with the client. We will get back to `Vignettes` in Chapter \@ref(building-ispum-app) when we will talk about prototyping.
 -   Function documentation. Every function in your package should come with its own documentation, even if it is just for your future self. "Exported" functions, the one which are available once you run `library(myapp)`, should be fully documented and will be listed in the package help page. Internal functions need less documentation, but documenting them is the best way to be sure you can come back to the app in a few months and still know why things are the way they are, what the pieces of the apps are used for, and how to use these functions [^structure-1] .
 -   If needed, you can build a `{pkgdown}` website, that can either be deployed on the web or kept internally. It can contain installation steps for I.T., internal features use for developers, a user guide, etc.
 
@@ -106,7 +106,7 @@ Or if we could install that on the server without any headache!
 When adopting the package structure, you can use classical tools to locally install your `{shiny}` application, *i.e* as any other R package, built as a `tar.gz`.
 On a server, be it RStudio products or as Docker containers, the package infrastructure will also allow to leverage the native R tools to build, install and launch R code.
 
-More about this in chapter \@ref(\#deploy-golem).
+More about this in chapter \@ref(\#deploy).
 
 #### `{shiny}` app as a Package, a checklist {.unnumbered}
 
@@ -756,7 +756,7 @@ Its particularity being that if **it's modified inside a function, this modified
 
 As this R6 object is not a reactive object and is not meant to be used as such, this reduces uncontrolled reactivity of the application, thus reduces the complexity of handling chain reactions across modules.
 Of course, you need to have another special tool in your app to trigger elements.
-All this will be explained in details in chapter \@ref(optim-caveat) of this book, and you can find an example of this pattern inside the [`{hexmake}`](https://github.com/ColinFay/hexmake/blob/master/R/R6.R) [@R-hexmake] application.
+All this will be explained in details in chapter \@ref(common-app-caveats) of this book, and you can find an example of this pattern inside the [`{hexmake}`](https://github.com/ColinFay/hexmake/blob/master/R/R6.R) [@R-hexmake] application.
 
 If you eager to know more about what `{R6}` is and how it works, we advice the chapter on this subject in *Advanced R* [@hadleywickham2019], [R6](https://adv-r.hadley.nz/r6.html).
 
