--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -1,6 +1,6 @@
 # (PART) Step 1: Design {.unnumbered}
 
-# UX Matters {#matters}
+# UX Matters {#ux-matters}
 
 Let's state the truth: no matter how complex and innovative your back-end is, your application is bad if your User Experience (UX) is bad.
 That's the hard truth.
