--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -1,4 +1,4 @@
-# Don't rush into coding {#step-design}
+# Don't rush into coding {#dont-rush-into-coding}
 
 ## Designing before coding
 
@@ -29,7 +29,7 @@ And of course, it saves time, be it immediately or in the long run: re-using an 
 
 Note also that assessing that a dependency/technology is a good choice for an application is not an easy task: there is a difference between *thinking* something will be the good choice and *knowing* that this choice is the correct one.
 Most of the time, when faced with a new technology, it makes sense to take some time to write a small prototype that tests the features we want to use.
-This process of prototyping small applications to test features is made easier notably by using the `{shinipsum}` package, that we will see in Chapter \@ref(stepprotopype).
+This process of prototyping small applications to test features is made easier notably by using the `{shinipsum}` package, that we will see in Chapter \@ref(building-ispum-app).
 
 Before rushing into coding, take some time to conceptualize your application / modules on a piece of paper.
 That will help you get the big picture of the piece of code you will be writing: what are the inputs, what are the outputs, what packages / services you can use inside your application, how it will fit in the rest of the project, and so on and so forth.
