--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -1,4 +1,4 @@
-# Building an "ipsum-app" {#stepprotopype}
+# Building an "ipsum-app" {#building-ispum-app}
 
 ## Prototyping is crucial
 
@@ -237,7 +237,6 @@ In many cases, when you are building an application, you are creating functions 
 Of course, as you are building your application as a package, it is way easier now: you can share a package with the application inside it, along with a function to launch the app but also functions that can be used outside.
 
 And if you need some data to use as an example, feel free to pick one from `{fakir}`!
-(See \@ref(stepprotopype)).
 
 ### Using the Rmd files as a laboratory notebook
 
