--- a/10-step-by-step-build.Rmd
+++ b/10-step-by-step-build.Rmd
@@ -1,6 +1,6 @@
 # (PART) Step 3: Build {.unnumbered}
 
-# Building the app with `{golem}` {#stepbuild}
+# Building the app with `{golem}` {#build-app-golem}
 
 Now that the application is prototyped inside a `{golem}` [@R-golem] skeleton, you can work on its integration.
 In this step of the workflow, you will be linking the back-end and front-end together, and working on the global engineering of the application, *i.e*:
@@ -148,7 +148,7 @@ And right now, to add a new testing file, you can call:
 usethis::use_test("app")
 ```
 
-More on testing in chapter \@ref(step-secure).
+More on testing in chapter \@ref(build-yourself-safety-net).
 
 ## Documentation and Code Coverage
 
