--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -7,7 +7,7 @@ try({
 })
 ```
 
-# Build yourself a safety net {#step-secure}
+# Build yourself a safety net {#build-yourself-safety-net}
 
 > "Don't fuck over Future You"\
 > `r right_link('JD', 'https://twitter.com/CMastication')`
