--- a/14-when_optimize.Rmd
+++ b/14-when_optimize.Rmd
@@ -1,6 +1,6 @@
 # (PART) Optimizing {.unnumbered}
 
-# The Need for Optimization {#when-optimize}
+# The Need for Optimization {#need-for-optimization}
 
 > Only once we have a solid characterization of the surface area we want to improve can we begin to identify the best way to improve it.\
 > `r right_link("Refactoring at Scale", "https://learning.oreilly.com/library/view/refactoring-at-scale/9781492075523/")`
