--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -1,4 +1,4 @@
-# Common Application Caveats {#optim-caveat}
+# Common Application Caveats {#common-app-caveats}
 
 ## Reactivity anti-patterns
 
@@ -918,7 +918,7 @@ server <- function(
 shinyApp(ui, server)
 ```
 
--   Both these functions take a `jQuery` selector to select the element in the UI. We will introduce these selectors in chapter \@ref(\#optimjs).
+-   Both these functions take a `jQuery` selector to select the element in the UI. We will introduce these selectors in chapter \@ref(\#using-javascript).
 
 ### Too Much Data in Memory
 
