--- a/17-javascript.Rmd
+++ b/17-javascript.Rmd
@@ -1,4 +1,4 @@
-# Using JavaScript {#optimjs}
+# Using JavaScript {#using-javascript}
 
 ```{r 17-javascript-1, include = FALSE}
 knitr::opts_chunk$set( comment = "", eval = FALSE)
