--- a/20-session-info.Rmd
+++ b/20-session-info.Rmd
@@ -2,7 +2,7 @@
 
 The current version of this book has been compiled on:
 
-```{r 20-session-info-1 }
+```{r 20-session-info-1, eval = TRUE}
 Sys.Date()
 ```
 
@@ -12,7 +12,7 @@ With the following configuration:
 xfun::session_info()
 ```
 
-```{r 20-session-info-1-bis, echo = FALSE}
+```{r 20-session-info-1-bis, echo = FALSE, eval = TRUE}
 a <- xfun::session_info() 
 a[[5]] <- gsub("/ C", "\n/ C", a[[5]])
 a
