--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -1,4 +1,4 @@
-# Planning Ahead {#planning}
+# Planning Ahead {#planning-ahead}
 
 ## Working with a "long-term" mindset
 
@@ -72,7 +72,7 @@ As you can not prevent code to break, you should at least get the tooling to:
 -   **Be informed that the codebase is broken**: this is the role of tests combined with CI
 -   **Be able to identify changes between versions, and potentially, get back in time to a previous code base**: this is the role of version control
 
-We will go deeper into testing and version control in [chapter 14](#step-secure).
+We will go deeper into testing and version control in [chapter 14](#build-yourself-safety-net).
 
 #### B. Small is beautiful {.unnumbered}
 
@@ -118,9 +118,9 @@ We strongly suggest to use git with a graphical interface (GitLab, GitHub, Bitbu
 These tasks are defined as issues, and will be closed during development.
 These interfaces can also be used to set continuous integration.
 
-If the team follows a `git flow` (described in chapter \@ref(secure)), the manager will also be in charge of reviewing and accepting the pull/merge requests to the main `dev` branch if they solve the associated issues.
+If the team follows a `git flow` (described in chapter \@ref(version-control)), the manager will also be in charge of reviewing and accepting the pull/merge requests to the main `dev` branch if they solve the associated issues.
 
-Do not worry if this sounds like a foreign language to you, we will get back to this method later in this book (chapter \@ref(secure)).
+Do not worry if this sounds like a foreign language to you, we will get back to this method later in this book (chapter \@ref(version-control)).
 
 #### B. Developers {.unnumbered}
 
