--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -241,7 +241,7 @@ In web development, there exists a methodology called "Monkey testing", which co
 This software testing method allows to test the robustness of the application, by seeing how much it can handle unexpected behaviors.
 
 Several JavaScript libraries exist when it comes to monkey testing, one of the most popular (and easy to use) library is called [`gremlin.js`](https://github.com/marmelab/gremlins.js).
-This library is particularly interesting when it comes to `{shiny}` as it does not need external installation: you can add the library as a bookmark on your browser, navigate to the application, and launch the testing (click on the "Generate Bookmarklet" link on the [top of the README]((https://github.com/marmelab/gremlins.js))).
+This library is particularly interesting when it comes to `{shiny}` as it does not need external installation: you can add the library as a bookmark on your browser, navigate to the application, and launch the testing (click on the "Generate Bookmarklet" link on the [top of the README](https://github.com/marmelab/gremlins.js)).
 Figure \@ref(fig:11-step-by-step-secure-7) show an example of running gremlins on the prenoms application.
 
 (ref:gremlinscap) Example of using `gremlins.js` on the "prenoms" `{shiny}` application.
