Fix #278 regarding stratégie du petit r example

--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -681,7 +681,7 @@ choice_ui <- function(id) {
 choice_server <- function(id, r) {
   moduleServer(
     id,
-    function(input, output, session, r) {
+    function(input, output, session) {
       # Whenever the choice changes, the value inside r is set
       observeEvent( input$choice , {
         r$number_from_first_mod <- input$choice
