--- a/index.Rmd
+++ b/index.Rmd
@@ -256,7 +256,7 @@ A big thanks also to [David Granjon](https://divadnojnarg.github.io/) for his pr
 
 We want to thank all the people that have contributed to this book, either via Pull Requests, Issue on the book Github Repository, or via direct conversation.
 
-[&#x0040;allaway](https://github.com/allaway), [&#x0040;andreferraribr](https://github.com/andreferraribr), [&#x0040;aronolof](https://github.com/aronolof), [&#x0040;BenjaminLouis](https://github.com/BenjaminLouis), [&#x0040;bstrain71](https://github.com/bstrain71), [&#x0040;cedricbriandgithub](https://github.com/cedricbriandgithub), [&#x0040;dA505819](https://github.com/dA505819), [&#x0040;dan-reznik](https://github.com/dan-reznik), [&#x0040;davidpb90](https://github.com/davidpb90), [&#x0040;denrou](https://github.com/denrou), [&#x0040;DianeBeldame](https://github.com/DianeBeldame), [&#x0040;eroten](https://github.com/eroten), [&#x0040;espinielli](https://github.com/espinielli), [&#x0040;etiennebacher](https://github.com/etiennebacher), [&#x0040;fBedecarrats](https://github.com/fBedecarrats), [&#x0040;flrd](https://github.com/flrd), [&#x0040;frankschmitt](https://github.com/frankschmitt), [&#x0040;FrieseWoudloper](https://github.com/FrieseWoudloper), [&#x0040;giocomai](https://github.com/giocomai), [&#x0040;Guillaume-Lombardo](https://github.com/Guillaume-Lombardo), [&#x0040;gwd999](https://github.com/gwd999), [&#x0040;hadley](https://github.com/hadley), [&#x0040;hsm207](https://github.com/hsm207), [&#x0040;jamespooley](https://github.com/jamespooley), [&#x0040;jcrodriguez1989](https://github.com/jcrodriguez1989), [&#x0040;jonmcalder](https://github.com/jonmcalder), [&#x0040;jpmarindiaz](https://github.com/jpmarindiaz), [&#x0040;julianstanley](https://github.com/julianstanley), [&#x0040;kdaily](https://github.com/kdaily), [&#x0040;maelle](https://github.com/maelle), [&#x0040;naomistrandberg](https://github.com/naomistrandberg), [&#x0040;psychometrician](https://github.com/psychometrician), [&#x0040;rainiercito](https://github.com/rainiercito), [&#x0040;ronniemo](https://github.com/ronniemo), [&#x0040;rpodcast](https://github.com/rpodcast), [&#x0040;sowla](https://github.com/sowla), [&#x0040;tellyshia](https://github.com/tellyshia), [&#x0040;ukyouhanDVSA](https://github.com/ukyouhanDVSA), [&#x0040;xari](https://github.com/xari), and [&#x0040;xvrdm](https://github.com/xvrdm).
+[&#x0040;allaway](https://github.com/allaway), [&#x0040;andreferraribr](https://github.com/andreferraribr), [&#x0040;aronolof](https://github.com/aronolof), [&#x0040;BenjaminLouis](https://github.com/BenjaminLouis), [&#x0040;bstrain71](https://github.com/bstrain71), [&#x0040;cedricbriandgithub](https://github.com/cedricbriandgithub), [&#x0040;dA505819](https://github.com/dA505819), [&#x0040;dan-reznik](https://github.com/dan-reznik), [&#x0040;davidpb90](https://github.com/davidpb90), [&#x0040;denrou](https://github.com/denrou), [&#x0040;DianeBeldame](https://github.com/DianeBeldame), [&#x0040;eroten](https://github.com/eroten), [&#x0040;espinielli](https://github.com/espinielli), [&#x0040;etiennebacher](https://github.com/etiennebacher), [&#x0040;fBedecarrats](https://github.com/fBedecarrats), [&#x0040;flrd](https://github.com/flrd), [&#x0040;frankschmitt](https://github.com/frankschmitt), [&#x0040;FrieseWoudloper](https://github.com/FrieseWoudloper), [&#x0040;giocomai](https://github.com/giocomai), [&#x0040;Guillaume-Lombardo](https://github.com/Guillaume-Lombardo), [&#x0040;gwd999](https://github.com/gwd999), [&#x0040;hadley](https://github.com/hadley), [&#x0040;hsm207](https://github.com/hsm207), [&#x0040;jamespooley](https://github.com/jamespooley), [&#x0040;jcrodriguez1989](https://github.com/jcrodriguez1989), [&#x0040;jonmcalder](https://github.com/jonmcalder), [&#x0040;josbop](https://github.com/josbop), [&#x0040;jpmarindiaz](https://github.com/jpmarindiaz), [&#x0040;julianstanley](https://github.com/julianstanley), [&#x0040;kdaily](https://github.com/kdaily), [&#x0040;maelle](https://github.com/maelle), [&#x0040;naomistrandberg](https://github.com/naomistrandberg), [&#x0040;psychometrician](https://github.com/psychometrician), [&#x0040;rainiercito](https://github.com/rainiercito), [&#x0040;ronniemo](https://github.com/ronniemo), [&#x0040;rpodcast](https://github.com/rpodcast), [&#x0040;sowla](https://github.com/sowla), [&#x0040;tellyshia](https://github.com/tellyshia), [&#x0040;ukyouhanDVSA](https://github.com/ukyouhanDVSA), [&#x0040;xari](https://github.com/xari), and [&#x0040;xvrdm](https://github.com/xvrdm).
 
 ```{r index-4, include = FALSE}
 # Some internal funs
